--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "node-fetch": "^3.4.0"
+    "express": "^5.2.1"
+   
   },
   "engines": {
   "node": ">=18.0.0"
